Bug 1083241 - Call gfx->Paint in PaintFrameWithEffects when there is blending. r=roc